--- a/simple-todo/index.html
+++ b/simple-todo/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Todo App</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="simple-todo/style.css">
 </head>
 <body>
     <h1>Simple Todo</h1>
@@ -14,6 +14,6 @@
         <ul id="task-list"></ul>
     </div>
 
-    <script src="script.js"></script>
+    <script src="simple-todo/script.js"></script>
 </body>
 </html>
